syntax="proto3";

package ProtobufRpc;

// the message reference https://github.com/bruceran/krpc/blob/master/misc/protos/krpcmeta.proto
message KrpcMeta {
    enum Direction {
        INVALID_DIRECTION = 0 ;
        REQUEST = 1;
        RESPONSE = 2;
    }

    message Trace {
        string traceId = 2;
	string parentSpanId = 3;
        string spanId = 4;
    }

    Direction direction = 1;
    int32 serviceId = 2;
    int32 msgId = 3;
    int32 sequence = 4;
    int32 retCode = 6;
    Trace trace = 7;
};

